After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 774328 - dtlssrtpenc: criticals with gst-inspect-1.0 and state change unit test
dtlssrtpenc: criticals with gst-inspect-1.0 and state change unit test
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.10.0
Other Linux
: Normal blocker
: 1.10.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-11-12 15:43 UTC by Tim-Philipp Müller
Modified: 2016-11-14 09:33 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Tim-Philipp Müller 2016-11-12 15:43:40 UTC
tpm@xps:~/gst/1.10/gst-plugins-bad$ gst-inspect-1.0 -a >/dev/null

** (gst-inspect-1.0:21603): CRITICAL **: file gstdtlsagent.c: line 237 (gst_dtls_agent_set_property): should not be reached

** (gst-inspect-1.0:21603): CRITICAL **: gst_dtls_certificate_get_property: assertion 'self->priv->pem' failed

** (gst-inspect-1.0:21603): CRITICAL **: gst_dtls_certificate_get_property: assertion 'self->priv->pem' failed


Stack trace (from git master):

(gdb) bt
  • #0 _g_log_abort
    at ././glib/gmessages.c line 487
  • #1 g_logv
    at ././glib/gmessages.c line 1296
  • #2 g_log
    at ././glib/gmessages.c line 1337
  • #3 g_object_new_internal
    at ././gobject/gobject.c line 1423
  • #4 g_object_new_internal
    at ././gobject/gobject.c line 1817
  • #5 g_object_new_valist
    at ././gobject/gobject.c line 2042
  • #6 g_object_new
    at ././gobject/gobject.c line 1626
  • #7 get_agent_by_pem
    at gstdtlsdec.c line 615
  • #8 gst_dtls_dec_init
    at gstdtlsdec.c line 188
  • #9 g_type_create_instance
    at ././gobject/gtype.c line 1866
  • #10 g_object_new_internal
    at ././gobject/gobject.c line 1783
  • #11 g_object_newv
    at ././gobject/gobject.c line 1930
  • #12 gst_element_factory_create
    at gstelementfactory.c line 376
  • #13 gst_element_factory_make
    at gstelementfactory.c line 449
  • #14 gst_dtls_srtp_dec_init
    at gstdtlssrtpdec.c line 179

Comment 1 Tim-Philipp Müller 2016-11-12 16:32:10 UTC
This also affects 1.8. I don't know if it's related to the recent changes/port to newer openssl or was there before as well.
Comment 2 Sebastian Dröge (slomo) 2016-11-14 09:24:11 UTC
I can't reproduce this here (the gst-inspect-1.0 -a), which OpenSSL version are you using? Did it only start happening for you with the port for OpenSSL 1.1?
Comment 3 Sebastian Dröge (slomo) 2016-11-14 09:27:05 UTC
1.1.0c here btw, and actually I can reproduce it. Let's see.
Comment 4 Sebastian Dröge (slomo) 2016-11-14 09:29:43 UTC
Found the problem
Comment 5 Sebastian Dröge (slomo) 2016-11-14 09:33:06 UTC
commit 3a069193e25364ebdacac86f4b03022c151ea29c
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Mon Nov 14 11:32:17 2016 +0200

    dtlscertificate: Fix error checking in RSA_generate_key_ex() usage
    
    Was broken during the port for OpenSSL 1.1.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774328