dtlscertificate: Fix error checking in RSA_generate_key_ex() usage

Was broken during the port for OpenSSL 1.1.

https://bugzilla.gnome.org/show_bug.cgi?id=774328